# vertex-bank

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: build_wallet.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 5bc76e47bee0_create_transaction_table.py  da23be911e82_create_user_table.py  f35dd21fcd4c_create_account_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  transactions.py  users.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: account.py  transaction.py  user.py
backend/app/schemas/: account.py  token.py  transaction.py  user.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/register/: page.tsx
frontend/app/src/components/: modal.tsx
frontend/app/src/services/: api.ts
